2006-11-10  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el: New file.

2006-11-10  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-expand-url): Don't expand twice.

2006-11-10  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-log-list-regexp): Fix regexp.
	(mixi-community-owner-regexp): Ditto.
	(mixi-topic-owner-regexp): Ditto.
	(mixi-topic-content-regexp): Ditto.
	(mixi-diary-comment-list-regexp): Ditto.
	(mixi-topic-comment-list-regexp): Ditto.
	(mixi-message-owner-regexp): Ditto.
	(mixi-introduction-list-regexp): Ditto.
	(mixi-my-introduction-list-regexp): Ditto.

2006-11-09  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-object-owner): New accessor method.
	(mixi-object-time): Ditto.
	(mixi-object-title): Ditto.

2006-11-09  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-make-friend-from-url): Support my object.
	(mixi-make-object-from-url): Ditto.

2006-11-08  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-friend-realize): Don't remove markup.
	(mixi-diary-realize): Ditto.
	(mixi-community-realize): Ditto.
	(mixi-topic-realize): Ditto.
	(mixi-get-comments): Ditto.
	(mixi-message-realize): Ditto.
	(mixi-get-introductions): Ditto.

2006-11-08  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-object-url-regexp): New regexp.
	(mixi-friend-url-regexp): Ditto.
	(mixi-diary-url-regexp): Ditto.
	(mixi-topic-url-regexp): Ditto.
	(mixi-message-url-regexp): Ditto.
	(mixi-community-url-regexp): Ditto.
	(mixi-make-object-from-url): New function.
	(mixi-make-friend-from-url): Ditto.
	(mixi-make-diary-from-url): Ditto.
	(mixi-make-community-from-url): Ditto.
	(mixi-make-topic-from-url): Ditto.
	(mixi-make-message-from-url): Ditto.
	(mixi-object-content): New accessor method.

2006-11-06  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-expand-url): New macro.
	(mixi-w3-retrieve): Use it.
	(mixi-w3m-retrieve): Ditto.
	(mixi-curl-retrieve): Ditto.

2006-11-01  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-diary-comment-list-regexp): Fix regexp.